@@ -10,7 +10,7 @@ resOld <- c("b7fa0888",  "82a699e",   "4754b3",    "b3da3",     "e67c",      "87
 resNew <- c("b7fa0888", "082a699e", "004754b3", "000b3da3", "0000e67c", "00000872")
 
 options("digestOldCRC32Format" = TRUE)
-checkIdentical(sapply(args, digest, algo="crc32"), resOld)
+expect_identical(sapply(args, digest, algo="crc32"), resOld)
 
 options("digestOldCRC32Format" = FALSE)
-checkIdentical(sapply(args, digest, algo="crc32"), resNew)
+expect_identical(sapply(args, digest, algo="crc32"), resNew)
