@@ -6,7 +6,7 @@ suppressMessages(library(digest))
 # zap small numbers to zero
 zapsmall <- 1:10
 border <- 2 ^ floor(log2(10 ^ -zapsmall))
-checkEqual(
+expect_equal(
     sapply(
         seq_along(zapsmall),
         function(i) { digest:::num2hex(border[i] * -1:1, digits = 6, zapsmall = zapsmall[i]) }
@@ -19,7 +19,7 @@ checkEqual(
 )
 
 # handle 0 correct
-checkEqual(digest:::num2hex(0), "0")
+expect_equal(digest:::num2hex(0), "0")
 
 
 # digits are consistent
@@ -27,10 +27,10 @@ x <- pi
 x.hex <- sapply(1:16, digest:::num2hex, x = x)
 x.hex <- x.hex[c(TRUE, diff(nchar(x.hex)) > 0)]
 exponent <-  unique(gsub("^[0-9a-f]* ", "", x.hex))
-checkEqual(length(exponent), 1L)
+expect_equal(length(exponent), 1L)
 
 mantissa <- gsub(" [0-9]*$", "", x.hex)
-checkTrue(all(
+ignore(expect_true(all(
     lapply(
         head(seq_along(mantissa), -1),
         function(i){
@@ -42,27 +42,27 @@ checkTrue(all(
             )
         }
     )
-))
+)))
 
 #it keeps NA values
 x <- c(pi, NA, 0)
-checkEqual(is.na(digest:::num2hex(x)), is.na(x))
+expect_equal(is.na(digest:::num2hex(x)), is.na(x))
 
 x <- c(pi, NA, pi)
-checkEqual(is.na(digest:::num2hex(x)), is.na(x))
+expect_equal(is.na(digest:::num2hex(x)), is.na(x))
 
 x <- as.numeric(c(NA, NA, NA))
-checkEqual(is.na(digest:::num2hex(x)), is.na(x))
+expect_equal(is.na(digest:::num2hex(x)), is.na(x))
 
 
 # handles empty vectors
-checkEqual(digest:::num2hex(numeric(0)), character(0))
+expect_equal(digest:::num2hex(numeric(0)), character(0))
 
 
 # example from FAQ 7.31
 # tests if all trailing zero's are removed
-checkTrue(identical(digest:::num2hex(2, digits = 14),
+expect_true(identical(digest:::num2hex(2, digits = 14),
                     digest:::num2hex(sqrt(2) ^ 2, digits = 14)))
 
-checkTrue(!identical(digest:::num2hex(2, digits = 15),
+expect_true(!identical(digest:::num2hex(2, digits = 15),
                      digest:::num2hex(sqrt(2) ^ 2, digits = 15)))
