@@ -1,3 +1,10 @@
+2019-06-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/testCRC32.R: Use expcect_* functions 
+        * inst/tinytest/testDigest2Int.R: Idem
+        * inst/tinytest/testNum2Hex.R: Idem
+        * inst/tinytest/testRaw.R: Idem
+
 2019-05-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/tinytest.R: New test driver using tinytest
